[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/TurnQueue.gd" type="Script" id=1]
[ext_resource path="res://assets/Winchester_shot.ogg" type="AudioStream" id=2]
[ext_resource path="res://assets/Dungeon_Battle_1_Mummies.ogg" type="AudioStream" id=3]

[node name="TurnQueue" type="Node2D"]
script = ExtResource( 1 )

[node name="GameOverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true
